k8s/istio/camunda.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: test-ra
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zeebe-gateway
  jwtRules:
  - issuer: "http://localhost:30000/realms/master"
    jwks: |
      {"keys":[{"kid":"mq62g7U4fiYFMPshyxlghbQR1FVe4x2BuL4HCgnHciU","kty":"RSA","alg":"RSA-OAEP","use":"enc","n":"w0I1BzJJgkT8MtXKCgi2i7XaCdu7aiHkIub9WqY3Ti3D1PGZMsUJgI_t6_A2iwSbbHEcbpr70Hb5gRsIX6SLuk8vBX5rpuqTy5spX9Mraj0Ky1G2RWivXAzi5cLhu-Gv-Pk_Ed90iNVqPwKuUxiGLYKBcBNF_3J-cAtgLsIquUnFKZKC1qAC4au7bkBkZVUmMXlNqSf_wC5uOl7lL0-4T6mc-0BfFAr5J5TRs-EDQx5h59qd2Y8VXZjzGq3gwd7wHGJzUmHoUdwZF20l7QmOyG2KK02gZGzMiZJLXAkpSCO2X7uKNdtj9aO4-jfHASC9Y3oeu7ReAzB4vHq_S7FA6w","e":"AQAB","x5c":["MIICmzCCAYMCBgGHSDhrWDA [...]
  - issuer: "http://localhost:30000/realms/master"
    jwksUri: http://keycloak.default.svc.cluster.local:8080/realms/master/protocol/openid-connect/certs

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-for-all
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zeebe-gateway
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    - source:
        namespaces:
          - test
