k8s/istio/requestauthorization.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: test-ra
  namespace: test
spec:
  selector:
    matchLabels:
      run: nginx
  jwtRules:
  - issuer: "http://localhost:30000/realms/master"
    jwksUri: "http://keycloak.default.svc.cluster.local:8080/realms/master/protocol/openid-connect/certs"

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-for-all
  namespace: test
spec:
  selector:
    matchLabels:
      run: nginx
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
